# go-client-generated/model_task_detail_response_view.go
@@ -1,0 +1,44 @@
+/*
+ * ET-GDS
+ *
+ * ET-GDS API doc.
+ *
+ * API version: ET-GDS API 7.1.0
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+
+package swagger
+
+// 任务详情返回的响应信息
+type TaskDetailResponseView struct {
+	// 异步任务的编号
+	TaskId string `json:"task_id,omitempty"`
+	// 任务结果
+	Status string `json:"status,omitempty"`
+	// 任务信息
+	Description string `json:"description,omitempty"`
+	// 资源的最后时间
+	EndTime float32 `json:"end_time,omitempty"`
+	// 请求失败时的原因，正常时为空
+	Message string `json:"message"`
+	//
+	Private string `json:"private,omitempty"`
+	// 任务操作对象
+	Operand string `json:"operand,omitempty"`
+	// 请求的返回码，正常时为0，失败时为对应错误码，如02.ff.ff.ffff
+	RetCode string `json:"ret_code"`
+	// 任务的当前步骤
+	CurStep float32 `json:"cur_step,omitempty"`
+	// 任务的步骤
+	Steps []string `json:"steps,omitempty"`
+	// 资源的名称
+	Name string `json:"name"`
+	// 任务的进度
+	Progress float32 `json:"progress,omitempty"`
+	// 资源的ID
+	Id string `json:"id"`
+	// 资源的开始时间
+	BeginTime float32 `json:"begin_time,omitempty"`
+	// 任务结果信息
+	RetMsg string `json:"ret_msg,omitempty"`
+}
